fix: cleaning up java depercations
resolving all compile depercation messages with javac 20.